--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,15 @@ plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
     id 'jacoco'
+    id "org.sonarqube" version "4.4.1.3373"
+}
+
+sonar {
+  properties {
+    property "sonar.projectKey", "dounyaa_SuperNotes"
+    property "sonar.organization", "dounyaa"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
 }
 
 jacoco {
