--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,13 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:32.1.1-jre'
+
+    implementation 'com.itextpdf:itext7-core:8.0.2'
+    implementation 'org.slf4j:slf4j-nop:2.0.0-alpha1'
+    implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.24'
+    implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
+
+
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
@@ -56,6 +63,9 @@ application {
     mainClass = 'supernotes.App'
 }
 
+run {
+    standardInput = System.in
+}
 
 jar {
     manifest {
