--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -53,6 +53,11 @@ jobs:
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: ./gradlew build sonar --info
+      
+    - name: Install Ruby and Asciidoctor dependencies
+      uses: actions/setup-ruby@v1
+      with:
+        ruby-version: 3.0
     - name: Install Asciidoctor and Asciidoctor PDF
       run: |
         gem install asciidoctor-pdf -v '1.5.3'
