--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -54,13 +54,13 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: ./gradlew build sonar --info
       
-    - name: Install Asciidoctor and Asciidoctor PDF
+    - name: Install Asciidoctor
       run: |
-        gem install asciidoctor asciidoctor-pdf --no-document
+        gem install asciidoctor-pdf --pre
 
     - name: Generate PDF from AsciiDoc
       run: |
-        asciidoctor-pdf main.adoc -o output.pdf
+        asciidoctor-pdf main.adoc
 
     - name: Upload PDF to GitHub Releases
       uses: actions/upload-release-asset@v1
