--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -53,4 +53,18 @@ jobs:
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: ./gradlew build sonar --info
+      
+    - name: Install Ruby and Asciidoctor dependencies
+      uses: actions/setup-ruby@v1
+      with:
+        ruby-version: 3.0
+
+    - name: Install Asciidoctor gems
+      run: |
+        gem install asciidoctor-pdf
+        gem install rouge
+
+    - name: Generate PDF from Asciidoctor
+      run: |
+        asciidoctor-pdf -D assets src/docs/asciidoc/main.adoc
 
