--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -66,5 +66,5 @@ jobs:
 
     - name: Generate PDF from Asciidoctor
       run: |
-        asciidoctor-pdf -D assets src/docs/asciidoc/main.adoc
+        asciidoctor-pdf -D assets app/src/docs/asciidoc/main.adoc
 
