--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -66,5 +66,11 @@ jobs:
 
     - name: Generate PDF from Asciidoctor
       run: |
-        asciidoctor-pdf -D assets app/src/docs/asciidoc/main.adoc
+        asciidoctor-pdf -D pp/src/docs/asciidoc/ app/src/docs/asciidoc/main.adoc
+          
+    - name: Upload PDF to release assets
+      uses: actions/upload-artifact@v2
+      with:
+        name: generated-pdf
+        path: pp/src/docs/asciidoc/main.pdf
 
