--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -69,5 +69,5 @@ jobs:
         asciidoctor-pdf -D ${{ github.workspace }}/app/src/docs/asciidoc/ ${{ github.workspace }}/app/src/docs/asciidoc/main.adoc
         
     - name: Move PDF to source directory
-      run: mv ${{ github.workspace }}/app/src/docs/asciidoc/main.pdf ${{ github.workspace }}/pp/src/docs/asciidoc/
+      run: mv ${{ github.workspace }}/app/src/docs/asciidoc/main.pdf ${{ github.workspace }}/app/src/docs/asciidoc/
 
