--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -54,6 +54,9 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: ./gradlew build sonar --info
       
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - name: Install Ruby and Asciidoctor dependencies
       uses: actions/setup-ruby@v1
       with:
@@ -66,6 +69,5 @@ jobs:
 
     - name: Generate PDF from Asciidoctor
       run: |
-       cd app/src/docs/asciidoc/
-       asciidoctor-pdf main.adoc -o main.pdf
+        asciidoctor-pdf -D assets app/src/docs/asciidoc/main.adoc
 
