--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13.2'
 
+    // Optional: Hamcrest library for more expressive assertions
+    testImplementation 'org.hamcrest:hamcrest:2.2'
+
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:32.1.1-jre'
     implementation 'com.google.api-client:google-api-client:2.0.0'
@@ -57,7 +60,9 @@ dependencies {
     //implementation group: 'com.itextpdf', name: 'itext7-core', version: '8.0.2'
 
 
-    implementation 'org.slf4j:slf4j-nop:2.0.0-alpha1'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha1'
+    implementation 'org.apache.logging.log4j:log4j-slf4j18-impl:2.14.0'
+
 //    implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.24'
     implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
@@ -74,9 +79,6 @@ dependencies {
     implementation 'com.google.api-client:google-api-client:2.0.0'
     implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
     implementation 'com.google.apis:google-api-services-calendar:v3-rev20220715-2.0.0'
-
-
-
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
