--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ jacoco {
 
 jacocoTestReport {
     reports {
-        //csv.enabled true
+        xml.required = true
     }
 }
 
@@ -79,6 +79,8 @@ dependencies {
     implementation 'com.google.api-client:google-api-client:2.0.0'
     implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
     implementation 'com.google.apis:google-api-services-calendar:v3-rev20220715-2.0.0'
+
+    implementation "com.deepl.api:deepl-java:1.5.0"
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
